tests/suite/errors/e14_impl_unknown_type.rs
// err: impl for unknown type `Ghost`

impl Ghost {
    pub fn haunt() {
        println!("boo");
    }
}

fn main() {}
